--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="Palestine Advocacy Club | University of Calgary" />
     <meta property="og:description" content="Join us in our mission to educate, raise awareness, and stand in solidarity with the Palestinian people through peaceful advocacy." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Palestine Advocacy Club | University of Calgary" />
